# proto-demo-ui

./: .gitignore  README.md  generate.sh  pyproject.toml
debug/: emulation_proto.py  run_virt_com.sh
proto/: proto_app.proto
proto_demo_ui/: create_mgs.py  main.py  proto_test.py  proto_ui.py
proto_demo_ui/qtareas/: proto_info.py  proto_set.py
